# Vacuum_cleaner_DFS

./: CMakeLists.txt  ConcreteSensors.cpp  ConcreteSensors.h  ConfigReader.h  House.cpp  House.h  MyAlgorithm.cpp  MyAlgorithm.h  Simulation.cpp  Simulation.h  Vacuum.cpp  Vacuum.h  abstract_algorithm.h  battery_meter.h  dirt_sensor.h  enums.h  input.txt  input1.txt  input1_output.txt  main.cpp  outputsimtxt  simulation_output.txt  wall_sensor.h
